Mark Gogs as deprecated installer.

--- a/gogs/README
+++ b/gogs/README
@@ -1,5 +1,5 @@
-Raspberry Pi Gogs Installation Scripts
-==========================================
+#Raspberry Pi Gogs Installation Scripts
+## Deprecated: Use GitLab install.
 
 Copyright (C) 2015 Javier Gusano Martinez
 
